--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,9 @@
     "@adonisjs/framework": "^5.0.9",
     "@adonisjs/ignitor": "^2.0.8",
     "@adonisjs/lucid": "^6.1.3",
-    "instagram-web-api": "^2.1.0"
+    "@adonisjs/vow": "^1.0.17",
+    "instagram-web-api": "^2.1.0",
+    "pg": "^7.14.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
@@ -35,7 +37,8 @@
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "sqlite3": "^4.1.1"
   },
   "autoload": {
     "App": "./app"
