--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "@adonisjs/lucid": "^6.1.3",
     "@adonisjs/validator": "^5.0.6",
     "@adonisjs/vow": "^1.0.17",
+    "date-fns": "^2.8.1",
     "instagram-web-api": "^2.1.0",
     "pg": "^7.14.0"
   },
