--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,8 @@
     "@adonisjs/vow": "^1.0.17",
     "adonis-scheduler": "^3.0.2",
     "date-fns": "^2.8.1",
-    "instagram-web-api": "^2.1.0",
-    "pg": "^7.14.0"
+    "pg": "^7.14.0",
+    "puppeteer": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
