--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,8 @@
     "adonis-scheduler": "^3.0.2",
     "date-fns": "^2.8.1",
     "pg": "^7.14.0",
-    "puppeteer": "^2.0.0"
+    "puppeteer": "^2.0.0",
+    "puppeteer-core": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
